[gd_scene load_steps=5 format=3 uid="uid://ct8gig3s6mkxc"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_sj0qf"]
[ext_resource type="FontFile" uid="uid://cy2mr8pwdog77" path="res://assets/fonts/Beanstalk.ttf" id="2_2y857"]
[ext_resource type="FontFile" uid="uid://bjtxep2m1e6vr" path="res://assets/fonts/CelticTime.ttf" id="3_mneus"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ebhx"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.133333)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="GameOver" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.294118, 0.294118, 0.294118, 0.509804)
script = ExtResource("1_sj0qf")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -131.5
offset_right = 76.5
offset_bottom = 131.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4ebhx")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 24

[node name="Score" type="Label" parent="PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2y857")
text = "1000
"
horizontal_alignment = 1

[node name="Medal" type="Label" parent="PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_mneus")
horizontal_alignment = 1

[node name="HeartContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BreadHealth" type="Label" parent="PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_mneus")
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer/Buttons"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_mneus")
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="Retry" type="Button" parent="PanelContainer/VBoxContainer/Buttons"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_mneus")
theme_override_font_sizes/font_size = 20
text = "Retry"

[node name="Next" type="Button" parent="PanelContainer/VBoxContainer/Buttons"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_mneus")
theme_override_font_sizes/font_size = 20
text = "Next"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Buttons/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Buttons/Next" to="." method="_on_next_pressed"]
